--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -7,10 +7,11 @@
 }
 
 .hero__outer {
-    left: 4%;
+    /* left: 4%; */
     margin-bottom: 16em;
 }
 
 .text-rt {
-    margin-left: 1.5em;
+    margin: 2em 0;
+    text-align: center;
 }
